// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animations renders loading 1`] = `
<div>
  <div
    class="animation-place"
  >
    <div
      class="animation loading"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`Animations renders success 1`] = `
<div>
  <div
    class="animation-place"
  >
    <div
      class="animation success"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</div>
`;
